--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,3 @@
 .frase-especial {
-    color: blue; /* Altere "blue" para a cor desejada */
+    color: rgb(0, 255, 102); /* Altere "blue" para a cor desejada */
 }
